// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ex5-BeanService matches: actual error 1`] = `undefined`;

exports[`ex5-BeanService matches: file tmp/ex5-beanservice.wsdl 1`] = `
Object {
  "wsdl:definitions": Object {
    "@_targetNamespace": "urn:Example5",
    "@_xmlns:apachesoap": "http://xml.apache.org/xml-soap",
    "@_xmlns:impl": "urn:Example5",
    "@_xmlns:intf": "urn:Example5",
    "@_xmlns:soapenc": "http://schemas.xmlsoap.org/soap/encoding/",
    "@_xmlns:wsdl": "http://schemas.xmlsoap.org/wsdl/",
    "@_xmlns:wsdlsoap": "http://schemas.xmlsoap.org/wsdl/soap/",
    "@_xmlns:xsd": "http://www.w3.org/2001/XMLSchema",
    "wsdl:binding": Object {
      "@_name": "ex5SoapBinding",
      "@_type": "impl:BeanService",
      "wsdl:operation": Object {
        "@_name": "processOrder",
        "wsdl:input": Object {
          "@_name": "processOrderRequest",
          "wsdlsoap:body": Object {
            "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
            "@_namespace": "urn:Example5",
            "@_use": "encoded",
          },
        },
        "wsdl:output": Object {
          "@_name": "processOrderResponse",
          "wsdlsoap:body": Object {
            "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
            "@_namespace": "urn:Example5",
            "@_use": "encoded",
          },
        },
        "wsdlsoap:operation": Object {
          "@_soapAction": "",
        },
      },
      "wsdlsoap:binding": Object {
        "@_style": "rpc",
        "@_transport": "http://schemas.xmlsoap.org/soap/http",
      },
    },
    "wsdl:message": Array [
      Object {
        "@_name": "processOrderResponse",
        "wsdl:part": Object {
          "@_name": "processOrderReturn",
          "@_type": "soapenc:string",
        },
      },
      Object {
        "@_name": "processOrderRequest",
        "wsdl:part": Object {
          "@_name": "order",
          "@_type": "impl:Order",
        },
      },
    ],
    "wsdl:portType": Object {
      "@_name": "BeanService",
      "wsdl:operation": Object {
        "@_name": "processOrder",
        "@_parameterOrder": "order",
        "wsdl:input": Object {
          "@_message": "impl:processOrderRequest",
          "@_name": "processOrderRequest",
        },
        "wsdl:output": Object {
          "@_message": "impl:processOrderResponse",
          "@_name": "processOrderResponse",
        },
      },
    },
    "wsdl:service": Object {
      "@_name": "BeanServiceService",
      "wsdl:port": Object {
        "@_binding": "impl:ex5SoapBinding",
        "@_name": "ex5",
        "wsdlsoap:address": Object {
          "@_location": "http://localhost:8080/axis/services/ex5",
        },
      },
    },
    "wsdl:types": Object {
      "schema": Object {
        "@_targetNamespace": "urn:Example5",
        "@_xmlns": "http://www.w3.org/2001/XMLSchema",
        "complexType": Array [
          Object {
            "@_name": "ArrayOf_soapenc_string",
            "complexContent": Object {
              "restriction": Object {
                "@_base": "soapenc:Array",
                "attribute": Object {
                  "@_ref": "soapenc:arrayType",
                  "@_wsdl:arrayType": "soapenc:string[]",
                },
              },
            },
          },
          Object {
            "@_name": "ArrayOf_xsd_int",
            "complexContent": Object {
              "restriction": Object {
                "@_base": "soapenc:Array",
                "attribute": Object {
                  "@_ref": "soapenc:arrayType",
                  "@_wsdl:arrayType": "xsd:int[]",
                },
              },
            },
          },
          Object {
            "@_name": "Order",
            "sequence": Object {
              "element": Array [
                Object {
                  "@_name": "customerName",
                  "@_nillable": "true",
                  "@_type": "soapenc:string",
                },
                Object {
                  "@_name": "itemCodes",
                  "@_nillable": "true",
                  "@_type": "impl:ArrayOf_soapenc_string",
                },
                Object {
                  "@_name": "quantities",
                  "@_nillable": "true",
                  "@_type": "impl:ArrayOf_xsd_int",
                },
                Object {
                  "@_name": "shippingAddress",
                  "@_nillable": "true",
                  "@_type": "soapenc:string",
                },
              ],
            },
          },
        ],
        "import": Object {
          "@_namespace": "http://schemas.xmlsoap.org/soap/encoding/",
        },
      },
    },
  },
}
`;

exports[`ex5-BeanService matches: stderr 1`] = `""`;

exports[`ex5-BeanService matches: stdout 1`] = `
"- Unable to find required classes (javax.activation.DataHandler and javax.mail.internet.MimeMultipart). Attachment support is disabled.
"
`;

exports[`ex6-widgetPrice matches: actual error 1`] = `undefined`;

exports[`ex6-widgetPrice matches: file tmp/ex6-widgetPrice.wsdl 1`] = `
Object {
  "wsdl:definitions": Object {
    "@_targetNamespace": "urn:Example6",
    "@_xmlns:apachesoap": "http://xml.apache.org/xml-soap",
    "@_xmlns:impl": "urn:Example6",
    "@_xmlns:intf": "urn:Example6",
    "@_xmlns:soapenc": "http://schemas.xmlsoap.org/soap/encoding/",
    "@_xmlns:wsdl": "http://schemas.xmlsoap.org/wsdl/",
    "@_xmlns:wsdlsoap": "http://schemas.xmlsoap.org/wsdl/soap/",
    "@_xmlns:xsd": "http://www.w3.org/2001/XMLSchema",
    "wsdl:binding": Object {
      "@_name": "WidgetPriceSoapBinding",
      "@_type": "impl:WidgetPrice",
      "wsdl:operation": Array [
        Object {
          "@_name": "getWidgetPrice",
          "wsdl:input": Object {
            "@_name": "getWidgetPriceRequest",
            "wsdlsoap:body": Object {
              "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
              "@_namespace": "urn:Example6",
              "@_use": "encoded",
            },
          },
          "wsdl:output": Object {
            "@_name": "getWidgetPriceResponse",
            "wsdlsoap:body": Object {
              "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
              "@_namespace": "urn:Example6",
              "@_use": "encoded",
            },
          },
          "wsdlsoap:operation": Object {
            "@_soapAction": "",
          },
        },
        Object {
          "@_name": "setWidgetPrice",
          "wsdl:input": Object {
            "@_name": "setWidgetPriceRequest",
            "wsdlsoap:body": Object {
              "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
              "@_namespace": "urn:Example6",
              "@_use": "encoded",
            },
          },
          "wsdl:output": Object {
            "@_name": "setWidgetPriceResponse",
            "wsdlsoap:body": Object {
              "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
              "@_namespace": "urn:Example6",
              "@_use": "encoded",
            },
          },
          "wsdlsoap:operation": Object {
            "@_soapAction": "",
          },
        },
      ],
      "wsdlsoap:binding": Object {
        "@_style": "rpc",
        "@_transport": "http://schemas.xmlsoap.org/soap/http",
      },
    },
    "wsdl:message": Array [
      Object {
        "@_name": "getWidgetPriceRequest",
        "wsdl:part": Object {
          "@_name": "in0",
          "@_type": "soapenc:string",
        },
      },
      Object {
        "@_name": "setWidgetPriceResponse",
      },
      Object {
        "@_name": "setWidgetPriceRequest",
        "wsdl:part": Array [
          Object {
            "@_name": "in0",
            "@_type": "soapenc:string",
          },
          Object {
            "@_name": "in1",
            "@_type": "soapenc:string",
          },
        ],
      },
      Object {
        "@_name": "getWidgetPriceResponse",
        "wsdl:part": Object {
          "@_name": "getWidgetPriceReturn",
          "@_type": "soapenc:string",
        },
      },
    ],
    "wsdl:portType": Object {
      "@_name": "WidgetPrice",
      "wsdl:operation": Array [
        Object {
          "@_name": "getWidgetPrice",
          "@_parameterOrder": "in0",
          "wsdl:input": Object {
            "@_message": "impl:getWidgetPriceRequest",
            "@_name": "getWidgetPriceRequest",
          },
          "wsdl:output": Object {
            "@_message": "impl:getWidgetPriceResponse",
            "@_name": "getWidgetPriceResponse",
          },
        },
        Object {
          "@_name": "setWidgetPrice",
          "@_parameterOrder": "in0 in1",
          "wsdl:input": Object {
            "@_message": "impl:setWidgetPriceRequest",
            "@_name": "setWidgetPriceRequest",
          },
          "wsdl:output": Object {
            "@_message": "impl:setWidgetPriceResponse",
            "@_name": "setWidgetPriceResponse",
          },
        },
      ],
    },
    "wsdl:service": Object {
      "@_name": "WidgetPriceService",
      "wsdl:port": Object {
        "@_binding": "impl:WidgetPriceSoapBinding",
        "@_name": "WidgetPrice",
        "wsdlsoap:address": Object {
          "@_location": "http://localhost:8080/axis/services/WidgetPrice",
        },
      },
    },
  },
}
`;

exports[`ex6-widgetPrice matches: stderr 1`] = `""`;

exports[`ex6-widgetPrice matches: stdout 1`] = `
"- Unable to find required classes (javax.activation.DataHandler and javax.mail.internet.MimeMultipart). Attachment support is disabled.
"
`;

exports[`help matches: actual error 1`] = `
[Error: Command failed: java -cp "axis-1_4/lib/*:axis-1_4/build/classes" org.apache.axis.wsdl.Java2WSDL --help
]
`;

exports[`help matches: stderr 1`] = `undefined`;

exports[`help matches: stdout 1`] = `undefined`;

exports[`usage matches: actual error 1`] = `
[Error: Command failed: java -cp "axis-1_4/lib/*:axis-1_4/build/classes" org.apache.axis.wsdl.Java2WSDL 
]
`;

exports[`usage matches: stderr 1`] = `undefined`;

exports[`usage matches: stdout 1`] = `undefined`;

exports[`widgetPrice matches: actual error 1`] = `undefined`;

exports[`widgetPrice matches: file tmp/wp.wsdl 1`] = `
Object {
  "wsdl:definitions": Object {
    "@_targetNamespace": "urn:Example6",
    "@_xmlns:apachesoap": "http://xml.apache.org/xml-soap",
    "@_xmlns:impl": "urn:Example6",
    "@_xmlns:intf": "urn:Example6",
    "@_xmlns:soapenc": "http://schemas.xmlsoap.org/soap/encoding/",
    "@_xmlns:wsdl": "http://schemas.xmlsoap.org/wsdl/",
    "@_xmlns:wsdlsoap": "http://schemas.xmlsoap.org/wsdl/soap/",
    "@_xmlns:xsd": "http://www.w3.org/2001/XMLSchema",
    "wsdl:binding": Object {
      "@_name": "WidgetPriceSoapBinding",
      "@_type": "impl:Java2WSDL",
      "wsdl:operation": Object {
        "@_name": "main",
        "wsdl:input": Object {
          "@_name": "mainRequest",
          "wsdlsoap:body": Object {
            "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
            "@_namespace": "urn:Example6",
            "@_use": "encoded",
          },
        },
        "wsdl:output": Object {
          "@_name": "mainResponse",
          "wsdlsoap:body": Object {
            "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
            "@_namespace": "urn:Example6",
            "@_use": "encoded",
          },
        },
        "wsdlsoap:operation": Object {
          "@_soapAction": "",
        },
      },
      "wsdlsoap:binding": Object {
        "@_style": "rpc",
        "@_transport": "http://schemas.xmlsoap.org/soap/http",
      },
    },
    "wsdl:message": Array [
      Object {
        "@_name": "mainRequest",
        "wsdl:part": Object {
          "@_name": "args",
          "@_type": "impl:ArrayOf_soapenc_string",
        },
      },
      Object {
        "@_name": "mainResponse",
      },
    ],
    "wsdl:portType": Object {
      "@_name": "Java2WSDL",
      "wsdl:operation": Object {
        "@_name": "main",
        "@_parameterOrder": "args",
        "wsdl:input": Object {
          "@_message": "impl:mainRequest",
          "@_name": "mainRequest",
        },
        "wsdl:output": Object {
          "@_message": "impl:mainResponse",
          "@_name": "mainResponse",
        },
      },
    },
    "wsdl:service": Object {
      "@_name": "Java2WSDLService",
      "wsdl:port": Object {
        "@_binding": "impl:WidgetPriceSoapBinding",
        "@_name": "WidgetPrice",
        "wsdlsoap:address": Object {
          "@_location": "http://localhost:8080/axis/services/WidgetPrice",
        },
      },
    },
    "wsdl:types": Object {
      "schema": Object {
        "@_targetNamespace": "urn:Example6",
        "@_xmlns": "http://www.w3.org/2001/XMLSchema",
        "complexType": Object {
          "@_name": "ArrayOf_soapenc_string",
          "complexContent": Object {
            "restriction": Object {
              "@_base": "soapenc:Array",
              "attribute": Object {
                "@_ref": "soapenc:arrayType",
                "@_wsdl:arrayType": "soapenc:string[]",
              },
            },
          },
        },
        "import": Object {
          "@_namespace": "http://schemas.xmlsoap.org/soap/encoding/",
        },
      },
    },
  },
}
`;

exports[`widgetPrice matches: stderr 1`] = `""`;

exports[`widgetPrice matches: stdout 1`] = `
"- Unable to find required classes (javax.activation.DataHandler and javax.mail.internet.MimeMultipart). Attachment support is disabled.
"
`;

exports[`widgetPriceOtherFile matches: actual error 1`] = `undefined`;

exports[`widgetPriceOtherFile matches: file tmp/wp-other.wsdl 1`] = `
Object {
  "wsdl:definitions": Object {
    "@_targetNamespace": "urn:Example6",
    "@_xmlns:apachesoap": "http://xml.apache.org/xml-soap",
    "@_xmlns:impl": "urn:Example6",
    "@_xmlns:intf": "urn:Example6",
    "@_xmlns:soapenc": "http://schemas.xmlsoap.org/soap/encoding/",
    "@_xmlns:wsdl": "http://schemas.xmlsoap.org/wsdl/",
    "@_xmlns:wsdlsoap": "http://schemas.xmlsoap.org/wsdl/soap/",
    "@_xmlns:xsd": "http://www.w3.org/2001/XMLSchema",
    "wsdl:binding": Object {
      "@_name": "WidgetPriceSoapBinding",
      "@_type": "impl:Java2WSDL",
      "wsdl:operation": Object {
        "@_name": "main",
        "wsdl:input": Object {
          "@_name": "mainRequest",
          "wsdlsoap:body": Object {
            "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
            "@_namespace": "urn:Example6",
            "@_use": "encoded",
          },
        },
        "wsdl:output": Object {
          "@_name": "mainResponse",
          "wsdlsoap:body": Object {
            "@_encodingStyle": "http://schemas.xmlsoap.org/soap/encoding/",
            "@_namespace": "urn:Example6",
            "@_use": "encoded",
          },
        },
        "wsdlsoap:operation": Object {
          "@_soapAction": "",
        },
      },
      "wsdlsoap:binding": Object {
        "@_style": "rpc",
        "@_transport": "http://schemas.xmlsoap.org/soap/http",
      },
    },
    "wsdl:message": Array [
      Object {
        "@_name": "mainRequest",
        "wsdl:part": Object {
          "@_name": "args",
          "@_type": "impl:ArrayOf_soapenc_string",
        },
      },
      Object {
        "@_name": "mainResponse",
      },
    ],
    "wsdl:portType": Object {
      "@_name": "Java2WSDL",
      "wsdl:operation": Object {
        "@_name": "main",
        "@_parameterOrder": "args",
        "wsdl:input": Object {
          "@_message": "impl:mainRequest",
          "@_name": "mainRequest",
        },
        "wsdl:output": Object {
          "@_message": "impl:mainResponse",
          "@_name": "mainResponse",
        },
      },
    },
    "wsdl:service": Object {
      "@_name": "Java2WSDLService",
      "wsdl:port": Object {
        "@_binding": "impl:WidgetPriceSoapBinding",
        "@_name": "WidgetPrice",
        "wsdlsoap:address": Object {
          "@_location": "http://localhost:8080/axis/services/WidgetPrice",
        },
      },
    },
    "wsdl:types": Object {
      "schema": Object {
        "@_targetNamespace": "urn:Example6",
        "@_xmlns": "http://www.w3.org/2001/XMLSchema",
        "complexType": Object {
          "@_name": "ArrayOf_soapenc_string",
          "complexContent": Object {
            "restriction": Object {
              "@_base": "soapenc:Array",
              "attribute": Object {
                "@_ref": "soapenc:arrayType",
                "@_wsdl:arrayType": "soapenc:string[]",
              },
            },
          },
        },
        "import": Object {
          "@_namespace": "http://schemas.xmlsoap.org/soap/encoding/",
        },
      },
    },
  },
}
`;

exports[`widgetPriceOtherFile matches: stderr 1`] = `""`;

exports[`widgetPriceOtherFile matches: stdout 1`] = `
"- Unable to find required classes (javax.activation.DataHandler and javax.mail.internet.MimeMultipart). Attachment support is disabled.
"
`;

exports[`widgetPriceStyleDOCUMENT matches: actual error 1`] = `
[Error: Command failed: java -cp "axis-1_4/lib/*:axis-1_4/build/classes" org.apache.axis.wsdl.Java2WSDL -o tmp/wp-other.wsdl -l"http://localhost:8080/axis/services/WidgetPrice" -n "urn:Example6" -p"samples.userguide.example" --style DOCUMENT "urn:Example6" org.apache.axis.wsdl.Java2WSDL
]
`;

exports[`widgetPriceStyleDOCUMENT matches: stderr 1`] = `undefined`;

exports[`widgetPriceStyleDOCUMENT matches: stdout 1`] = `undefined`;

exports[`widgetPriceStyleWSDL matches: actual error 1`] = `
[Error: Command failed: java -cp "axis-1_4/lib/*:axis-1_4/build/classes" org.apache.axis.wsdl.Java2WSDL -o tmp/wp-other.wsdl -l"http://localhost:8080/axis/services/WidgetPrice" -n "urn:Example6" -p"samples.userguide.example" --style RPC "urn:Example6" org.apache.axis.wsdl.Java2WSDL
]
`;

exports[`widgetPriceStyleWSDL matches: stderr 1`] = `undefined`;

exports[`widgetPriceStyleWSDL matches: stdout 1`] = `undefined`;
